<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="androidx.core.content.ContextCompat" />

        <variable
            name="viewModel"
            type="com.hohoanghai.shoestore.fragment.instructions.InstructionsViewModel" />
    </data>

    <!--
    In this fragment, I used ConstraintLayout because it makes it easy
    to arrange the views as designed, similar to the Welcome Fragment
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingBottom="@dimen/fragment_vertical_margin"
        tools:context=".fragment.instructions.InstructionsFragment">

        <ImageView
            android:id="@+id/ivInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/welcome_content_description"
            android:src="@{ContextCompat.getDrawable(context, viewModel.currentInstruction.image)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_instruction_1" />

        <TextView
            android:id="@+id/tvInstructionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@{context.getString(viewModel.currentInstruction.title)}"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivInstruction"
            tools:text="@string/instruction_1" />

        <TextView
            android:id="@+id/tvInstructionSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{context.getString(viewModel.currentInstruction.subtitle)}"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInstructionTitle"
            tools:text="@string/instruction_subtitle" />

        <Button
            android:id="@+id/btnPrev"
            style="@style/DefaultButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:onClick="@{() -> viewModel.prev()}"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/previous"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInstructionSubtitle"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnNext"
            style="@style/DefaultButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:onClick="@{() -> viewModel.next()}"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/next"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInstructionSubtitle"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>